--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Shiny Windows | Window Cleaning Service</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
@@ -14,11 +15,13 @@
         <h4>406-672-7616</h4>
       </div>
     </nav>
-    <div class="header-container">
-      <div class="color-overlay">
+    <div class="row">
+      <div class="col-md-6" id="top-image">
+        <img class="header-image" src="images/masthead-box.jpg" alt="Picture of shiny windows.">
+      </div>
+      <div class="col-md-6">
 
       </div>
-      <!-- <img class="header-image" src="./images/large-header.jpg" alt="Street of residential homes and windows."> -->
     </div>
   </body>
 </html>
