--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
       <div class="col-md-6" id="top-image">
         <img class="header-image" src="images/masthead-box.jpg" alt="Picture of shiny windows.">
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6" id="about">
+        <div id="about-text">
+          <h2>Professional window cleaning services.</h2>
+          <p><b>Shiny Windows</b> has been in business for over ten years. Our attention to detail and dedication to our customers sets us well ahead of the competition. We offer residential and commercial cleaning of windows, screens, flashing, and trim. Our team takes the upmost care to ensure high quality results.</p>
+          <p>For a free estimate contact us today:</p>
+          <p>Phone: <b>406-672-7616</b></p>
+          <p>Email: <b>shiny-windows@gmail.com</b></p>
+          <p>Or fill out the form below for a <b>free online estimate!</b></p>
+        </div>
+      </div>
+    </div>
+    <div class="form-div">
+      <div class="dark-overlay">
 
       </div>
     </div>
