--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body>
+
     <nav class="nav-container">
       <a href="index.html"><h1 class="header-text">Shiny Windows</h1></a>
       <div class="estimate">
@@ -15,9 +15,11 @@
         <h4>406-672-7616</h4>
       </div>
     </nav>
-    <div class="row">
-      <div class="col-md-6" id="top-image">
-        <img class="header-image" src="images/masthead-box.jpg" alt="Picture of shiny windows.">
+
+  <body>
+    <div class="row" id="top-content">
+      <div class="col-md-6 top-image">
+        <img src="images/masthead-box.jpg" alt="Picture of shiny windows.">
       </div>
       <div class="col-md-6" id="about">
         <div id="about-text">
@@ -30,9 +32,12 @@
         </div>
       </div>
     </div>
-    <div class="form-div">
-      <div class="dark-overlay">
+    <div class="row" id="form-div">
+      <div class="col-md-6">
 
+      </div>
+      <div class="col-md-6 top-image">
+        <img src="images/large-header.jpg" alt="Row of houses and shiny windows.">
       </div>
     </div>
   </body>
