--- a/index.html
+++ b/index.html
@@ -33,21 +33,33 @@
     <div class="row">
       <div class="col-md-6 table">
         <div class="table-text">
-          <form>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <h2>Free online estimate:</h2>
+          <form class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <!-- <label for="exampleInputEmail1">Email address</label> -->
+                <input type="windows" class="form-control" id="windows" placeholder="Number of windows">
+                <small id="windowHelp" class="form-text text-muted">Number of windows should be counted per pane of glass.</small>
+              </div>
+              <div class="form-group">
+                <!-- <label for="exampleInputEmail1">Email address</label> -->
+                <input type="screens" class="form-control" id="screens" placeholder="Number of window screens">
+                <small id="screenHelp" class="form-text text-muted">Leave blank if screen cleaning is not required.</small>
+              </div>
             </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <div class="col-md-6">
+              <div class="form-group">
+                <!-- <label for="exampleInputPassword1">Password</label> -->
+                <input type="email" class="form-control" id="email" placeholder="Email address">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              </div>
+              <!-- <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              </div> -->
+              <button type="submit" class="btn btn-primary">Submit</button>
+              <small id="submitHelp" class="form-text text-muted">Click submit for your free online estimate! This estimate may differ than actual cost.</small>
             </div>
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
       </div>
