--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 <small id="windowHelp" class="form-text text-muted">Number of windows should be counted per pane of glass.</small>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
-                <label class="form-check-label" for="inlineRadio1">Inside/Outside</label>
+                <input class="form-check-input" type="radio" name="radios" id="insideRadio" value="insideRadio" checked>
+                <label class="form-check-label" for="insideRadio">Inside/Outside</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                <label class="form-check-label" for="inlineRadio2">Outside</label>
+                <input class="form-check-input" type="radio" name="radios" id="outsideRadio" value="outsideRadio">
+                <label class="form-check-label" for="outsideRadio">Outside</label>
               </div><br>
               <small>Check outside if you don't need the inside of the windows cleaned.</small>
             </div>
