--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
                 <input type="email" class="form-control" id="email" placeholder="Email address">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
               </div>
-              <div class="form-check">
+              <div class="form-check" id="screenCheckDiv">
                 <input type="checkbox" class="form-check-input" id="screenCheck" name="screenCheck">
                 <label class="form-check-label" for="screenCheck">Include screen cleaning</label>
               </div>
               <div class="form-group" id="hidden">
-                <br>
                 <!-- <label for="exampleInputEmail1">Email address</label> -->
                 <input type="screens" class="form-control" id="screens" placeholder="Number of window screens">
               </div>
