--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
           <form class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <!-- <label for="exampleInputEmail1">Email address</label> -->
                 <input type="windows" class="form-control" id="windows" placeholder="Number of windows" required>
                 <small id="windowHelp" class="form-text text-muted">Number of windows should be counted per pane of glass.</small>
               </div>
@@ -54,7 +53,6 @@
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <!-- <label for="exampleInputPassword1">Password</label> -->
                 <input type="email" class="form-control" id="email" placeholder="Email address">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
               </div>
@@ -62,8 +60,7 @@
                 <input type="checkbox" class="form-check-input" id="screenCheck" name="screenCheck">
                 <label class="form-check-label" for="screenCheck">Include screen cleaning</label>
               </div>
-              <div class="form-group" id="hidden">
-                <!-- <label for="exampleInputEmail1">Email address</label> -->
+              <div class="form-group hidden" id="hidden1">
                 <input type="screens" class="form-control" id="screens" placeholder="Number of window screens">
               </div>
             </div>
@@ -73,6 +70,8 @@
               <small class="form-text text-muted">Click submit for your free online estimate! This estimate may differ from the actual cost.</small>
             </div>
           </form>
+        </div>
+        <div class="results hidden table-text" id="estimateTotal">
         </div>
       </div>
       <div class="col-md-6 table-image">
